--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 mt-5">
                         <div class="feature-box fbox-center fbox-effect">
                             <div class="fbox-icon">
                                 <a href="#">
@@ -374,7 +374,7 @@
                             <p class="lead text-justify" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 mt-5">
                         <div class="feature-box fbox-center fbox-effect">
                             <div class="fbox-icon">
                                 <a href="#">
@@ -385,7 +385,7 @@
                             <p class="lead text-justify" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 mt-5">
                         <div class="feature-box fbox-center fbox-effect">
                             <div class="fbox-icon">
                                 <a href="#">
@@ -396,7 +396,7 @@
                             <p class="lead text-justify" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 mt-5">
                         <div class="feature-box fbox-center fbox-effect">
                             <div class="fbox-icon">
                                 <a href="#">
@@ -420,7 +420,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-line2-speedometer"></i>
@@ -429,7 +429,7 @@
                             <p class="texto-blanco text-justify">Entregamos tu proyecto en la menor cantidad de tiempo posible.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-users1"></i>
@@ -438,7 +438,7 @@
                             <p class="texto-blanco text-justify">Somos un equipo de profesionales en el desarrollo web que entienden la necesidad de tu proyecto.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-handshake"></i>
@@ -448,8 +448,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-lg-4 col-sm-4">
+                <div class="row">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-headset"></i>
@@ -458,7 +458,7 @@
                             <p class="texto-blanco text-justify">Estamos disponibles siempre para atender sus inquietudes.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-world"></i>
@@ -467,7 +467,7 @@
                             <p class="texto-blanco text-justify">Contamos con lo que necesitas para estar en el mundo digital.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-plus"></i>
