--- a/index.html
+++ b/index.html
@@ -589,12 +589,7 @@
                 <div class="heading-block center">
                     <h2>Últimos trabajos web, conoce la calidad de ellos</h2>
                 </div>
-                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1">
-                    <div class="oc-item">
-                        <a target="_blank" href="http://www.addictivebeautynow.com">
-                            <img src="images/portafolio/web/addictivebeautyspa.jpg" alt="Image 1">
-                        </a>
-                    </div>
+                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-loop="true" data-items-xs="1" data-items-sm="1">
                     <div class="oc-item">
                         <a target="_blank" href="http://www.petroleumblg.com">
                             <img src="images/portafolio/web/blg.jpg" alt="Image 2">
@@ -618,6 +613,11 @@
                     <div class="oc-item">
                         <a target="_blank" href="https://weare-yourfriends.com">
                             <img src="images/portafolio/web/wayf.jpg" alt="Image 6">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.addictivebeautynow.com">
+                            <img src="images/portafolio/web/addictive-rs.jpg" alt="Image 1">
                         </a>
                     </div>
                 </div>
