--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 							<span class="texto-blanco t300">La identidad de tu negocio te espera.</span>
 						</div>
                     </div>
-                    <div class="col-lg-3 mt-3">
+                    <div class="col-lg-3 col-sm-3 mt-3">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
