--- a/us/index.html
+++ b/us/index.html
@@ -107,14 +107,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
-                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img  src="../images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -237,12 +237,12 @@
                             data-blendmode="hard-light"
                             style="z-index: 5;font-family:Poppins;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
-                        <div class="tp-caption tp-resizeme" 
+                        <div class="tp-caption tp-shape tp-shapewrapper" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-60','-60','-60','-10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['220','220','220','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -255,14 +255,14 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="../images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','450px']" data-hh="['300px','300px','300px','170px']" data-no-retina>
                         </div>
-                        <div class="tp-caption"
+                        <div class="tp-caption tp-resizeme"
                             id="slide-240-layer-2"
                             data-x="['left','left','left','left']" 
                             data-hoffset="['120','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['50','40','0','-60']"
+                            data-voffset="['50','40','0','-40']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
                             data-width="['640','481','320','260']"
@@ -278,9 +278,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            Your best option to make your idea a reality.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -421,7 +421,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-line2-speedometer"></i>
@@ -430,7 +430,7 @@
                             <p class="texto-blanco text-justify">We deliver your project in the shortest amount of time possible.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-users1"></i>
@@ -439,7 +439,7 @@
                             <p class="texto-blanco text-justify">We are a team of web development professionals who understand the need for your project.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-handshake"></i>
@@ -449,8 +449,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-lg-4 col-sm-4">
+                <div class="row ">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-headset"></i>
@@ -459,7 +459,7 @@
                             <p class="texto-blanco text-justify">We are always available to answer your questions.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-world"></i>
@@ -468,7 +468,7 @@
                             <p class="texto-blanco text-justify">We have what you need to be in the digital world.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-4">
+                    <div class="col-lg-4 col-sm-4 my-3">
                         <div class="feature-box fbox-small fbox-plain">
                             <div class="fbox-icon">
                                 <i class="texto-blanco icon-plus"></i>
@@ -489,10 +489,10 @@
 							<span class="texto-blanco t300">The identity of your business awaits you.</span>
 						</div>
                     </div>
-                    <div class="col-lg-3 mt-3">
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                    <div class="col-lg-3 col-sm-4 mt-3 ">
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200"  >
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contact us</span>
+                            <span class="">Learn more</span>
                         </a>
                     </div>
                 </div>
@@ -591,7 +591,39 @@
                 <div class="heading-block center">
                     <h2>Latest web jobs, know the quality of them</h2>
                 </div>
-                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
+                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-loop="true" data-items-xs="1" data-items-sm="1">
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.petroleumblg.com">
+                            <img src="../images/portafolio/web/blg.jpg" alt="Image 2">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.drycleaningontherun.com">
+                            <img src="../images/portafolio/web/drycleaning.jpg" alt="Image 3">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.jjcustomsolution.com">
+                            <img src="../images/portafolio/web/jjsolutions.jpg" alt="Image 4">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.serviplotca.com">
+                            <img src="../images/portafolio/web/serviplotca.jpg" alt="Image 5">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="https://weare-yourfriends.com">
+                            <img src="../images/portafolio/web/wayf.jpg" alt="Image 6">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.addictivebeautynow.com">
+                            <img src="../images/portafolio/web/addictive-rs.jpg" alt="Image 1">
+                        </a>
+                    </div>
+                </div>
+                <div id="image-carousel" class="d-none d-lg-block owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
