--- a/nosotros.html
+++ b/nosotros.html
@@ -109,15 +109,15 @@
       <div id="header-wrap">
          <div class="container clearfix">
             <div id="primary-menu-trigger">
-               <i class="icon-reorder"></i>
+               <i class="icon-plus texto-verde" style="font-size: 25px"></i>
             </div>
             <div id="logo">
                <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                   <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                </a>
                <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                  <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
-               </a>
+                  <img  src="images/logos/home.png" alt="CreativosPlus">
+              </a>
             </div>
             <nav id="primary-menu" class="with-arrows clearfix not-dark">
                <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
@@ -242,9 +242,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-60','-60','-60','-60']" 
+                            data-hoffset="['-60','-60','-60','-10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['220','220','220','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -257,14 +257,14 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/slider/quienes-somos.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
+                            <img src="images/slider/quienes-somos.png" alt="Conocenos" data-ww="['900px','900px','900px','900px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                            id="slide-240-layer-2"
                            data-x="['left','left','left','left']" 
                            data-hoffset="['120','120','100','80']"
                            data-y="['middle','middle','middle','middle']" 
-                           data-voffset="['50','40','0','-60']"
+                           data-voffset="['50','40','0','-40']"
                            data-fontsize="['26','23','20','17']"
                            data-lineheight="['35','30','25','22']"
                            data-width="['640','481','320','260']"
@@ -280,9 +280,9 @@
                            data-paddingbottom="[0,0,0,0]"
                            data-paddingleft="[0,0,0,0]"
                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                           Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                           Comienza a crecer con nosotros, ven y conocenos.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                            target="_self"			 
                            id="slide-1-layer-12" 
                            data-x="['left','left','left','left']" 
@@ -351,7 +351,7 @@
       <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
          <div class="container clearfix">
             <div class="row clearfix">
-               <div class="col-lg-7">
+               <div class="col-lg-6">
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                      <h2>Conoce más de Nosotros</h2>
                   </div>
@@ -361,8 +361,8 @@
                      <span>Contáctanos</span>
                   </a>
                </div>
-               <div class="col-lg-5">
-                  <img src="images/nosotros/3..jpg" style="position: absolute; top: 50px; left: 50px;" data-animate="fadeInRight" data-delay="100" alt="Chrome">
+               <div class="col-lg-6 col-sm-4">
+                  <img src="images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Nosotros">
                </div>
             </div>
             <div class="line"></div>
@@ -417,10 +417,10 @@
             </div>
             <div class="line"></div>
             <div class="row clearfix">
-               <div class="col-lg-5">
-                  <img src="images/nosotros/2..jpg" style="position: absolute; top: 70px; left: -20px;" data-animate="fadeInLeft" data-delay="100" alt="Chrome">
+               <div class="col-lg-6">
+                  <img src="images/nosotros/2..jpg" style="position: relative; top: 50px; " data-animate="fadeInLeft" data-delay="100" alt="mision">
                </div>
-               <div class="col-lg-7">
+               <div class="col-lg-6">
                   <div class="heading-block topmargin center" style="margin-bottom: 0 !important;">
                         <h2>Nuestra Misión</h2>
                   </div>
@@ -573,7 +573,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                  <i class="icon-line-arrow-right"></i>
                                  <span>Enviar</span>
                              </button>
@@ -585,9 +585,12 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje" required></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                              <i class="icon-line-arrow-right"></i>
+                               <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
