--- a/trabajos.html
+++ b/trabajos.html
@@ -107,14 +107,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img  src="images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -240,9 +240,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-70','-70','-70','-70']" 
+                            data-hoffset="['-70','-70','-70','-10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','220']" 
+                            data-voffset="['220','220','220','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -262,7 +262,7 @@
                             data-x="['left','left','left','left']" 
                             data-hoffset="['120','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['50','40','0','-60']"
+                            data-voffset="['50','40','0','-40']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
                             data-width="['640','481','320','260']"
@@ -278,9 +278,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                             Tu mejor opción para hacer tu idea realidad.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -351,7 +351,39 @@
                 <div class="heading-block center">
                     <h2>Últimos trabajos web, conoce la calidad de ellos.</h2>
                 </div>
-                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
+                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-loop="true" data-items-xs="1" data-items-sm="1">
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.petroleumblg.com">
+                            <img src="images/portafolio/web/blg.jpg" alt="Image 2">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.drycleaningontherun.com">
+                            <img src="images/portafolio/web/drycleaning.jpg" alt="Image 3">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.jjcustomsolution.com">
+                            <img src="images/portafolio/web/jjsolutions.jpg" alt="Image 4">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.serviplotca.com">
+                            <img src="images/portafolio/web/serviplotca.jpg" alt="Image 5">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="https://weare-yourfriends.com">
+                            <img src="images/portafolio/web/wayf.jpg" alt="Image 6">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a target="_blank" href="http://www.addictivebeautynow.com">
+                            <img src="images/portafolio/web/addictive-rs.jpg" alt="Image 1">
+                        </a>
+                    </div>
+                </div>
+                <div id="image-carousel" class="d-none d-lg-block owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
@@ -366,8 +398,8 @@
                                 <li class="carousel-grid-item">
                                     <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 200px">
                                         <blockquote class="blockquote border-0 mb-0">
-                                            <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
-                                            <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
+                                            <p class="mb-3 text-white">"El buen diseño es obvio. El gran diseño es transparente."</p>
+                                            <footer class="blockquote-footer text-white-50 font-italic">Joe Sparano</footer>
                                         </blockquote>
                                     </div>
                                 </li>
@@ -418,7 +450,29 @@
                 <div class="heading-block center">
                     <h2>Últimos diseños realizados, conoce la calidad de ellos.</h2>
                 </div>
-                <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="portafolio">
+                <div id="oc-images" class="d-block d-sm-none owl-carousel image-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="true" data-loop="true" data-items-xs="1" data-items-sm="1">
+                    <div class="oc-item">
+                        <a  href="#">
+                            <img src="images/portafolio/grafico/3.jpg" data-lightbox="image" class="item" style="background-image: url('../images/portafolio/grafico/3.jpg'); min-height: 340px">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a  href="#">
+                            <img src="images/portafolio/grafico/2-1.jpg" alt="Image 3">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a  href="#">
+                            <img src="images/portafolio/grafico/1.jpg" alt="Image 4">
+                        </a>
+                    </div>
+                    <div class="oc-item">
+                        <a  href="#">
+                            <img src="images/portafolio/grafico/1-2.jpg" alt="Image 5">
+                        </a>
+                    </div>
+                </div>
+                <div id="image-carousel" class="d-none d-lg-block owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="portafolio">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
@@ -493,7 +547,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -505,9 +559,12 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje" required></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
