--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -257,7 +257,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/slider/about-us.png" alt="" data-ww="['600px','600px','600px','600px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
+                            <img src="../images/slider/about-us.png" alt="About us" data-ww="['600px','600px','600px','600px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                            id="slide-240-layer-2"
@@ -362,7 +362,7 @@
                   </a>
                </div>
                <div class="col-lg-6 col-sm-4">
-                  <img src="../images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Chrome">
+                  <img src="../images/nosotros/3..jpg" style="position: relative; top: 50px; " data-animate="fadeInRight" data-delay="100" alt="Us">
                </div>
             </div>
             <div class="line"></div>
