--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -106,14 +106,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>  
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -266,7 +266,7 @@
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -424,7 +424,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -436,9 +436,13 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
+  
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
