--- a/us/index.html
+++ b/us/index.html
@@ -780,7 +780,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button type="button" id="puto2" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Send</span>
                                 </button>
@@ -792,6 +792,10 @@
                                 <label class="texto-blanco" for="mensaje">Message (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Your Message"></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Send</span>
+                            </button>
                         </div>
                     </div>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
