--- a/us/diseno-web.html
+++ b/us/diseno-web.html
@@ -106,14 +106,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
-                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                        <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:100px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="../images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -226,9 +226,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['-20','-20','-20','-20']" 
+                            data-hoffset="['-20','-20','-20','10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['300','300','300','300']" 
+                            data-voffset="['300','300','300','150']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -248,7 +248,7 @@
                             data-x="['left','left','left','left']" 
                             data-hoffset="['120','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['50','40','0','-60']"
+                            data-voffset="['50','40','0','-30']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
                             data-width="['640','481','320','260']"
@@ -264,9 +264,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            We design and create internet presence.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -355,7 +355,7 @@
             <div class="clear"></div>
             <div id="section-stunning-graphics" class="page-section topmargin bottommargin-lg">
                 <div class="row clearfix">
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="topmargin-lg d-none d-lg-block"></div>
                         <div class="emphasis-title bottommargin-sm">
                             <h2 style="font-size: 42px;" class="font-body ls1 t400">E-Commerce</h2>
@@ -366,13 +366,31 @@
                             <span>Contact Us</span>
                         </a>
                     </div>
-                    <div class="col-lg-5 center">
+                    <div class="col-lg-6 center">
                         <img src="../images/servicios/WEB/2.png" alt="phone" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
         </div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+        <div id="section-nextgen" class="page-section topmargin" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+            <div class="row clearfix">
+                <div class="col-lg-6 center">
+                    <img src="../images/servicios/WEB/3.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                </div>
+                <div class="col-lg-6">
+                    <div class="topmargin-lg d-none d-lg-block"></div>
+                    <div class="emphasis-title ">
+                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Web Re-design</h2>
+                    </div>
+                    <p class="lead text-justify">Having a good online image is very important, CreativosPlus is in charge of giving you the innovative image you need, with the best technologies on the market.</p>
+                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Contact Us</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!--<div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-7 offset-lg-5">
@@ -392,7 +410,7 @@
             <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
                 <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('../images/servicios/WEB/3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
-        </div>
+        </div>-->
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
@@ -424,7 +442,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button type="button" id="puto2" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Send</span>
                                 </button>
@@ -436,9 +454,13 @@
                                 <label class="texto-blanco" for="mensaje">Message (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Your Message"></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Send</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
+
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
