--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -109,7 +109,7 @@
       <div id="header-wrap">
           <div class="container clearfix">
               <div id="primary-menu-trigger">
-                  <i class="icon-reorder"></i>
+                  <i class="icon-plus texto-verde" style="font-size: 25px"></i>
               </div>
               <div id="logo">
                   <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
