--- a/us/trabajos.html
+++ b/us/trabajos.html
@@ -561,7 +561,7 @@
                             </div>
                             <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                 <i class="icon-line-arrow-right"></i>
-                                <span>Enviar</span>
+                                <span>Send</span>
                             </button>
                         </div>
                     </div>
