--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -39,7 +39,7 @@
     <meta name="Classification" content="commercial">
     <meta name="Usergroup" content="Public">
     <meta content="yes" http-equiv="public">
-    <meta property="og:url" content="https://creativosplus.com"/>
+    <meta property="og:url" content="https://creativosplus.com/diseno-grafico"/>
     <meta name="googlebot" content="all">
     <meta NAME="rating" CONTENT="General">
     <meta name="audience" content="All">
@@ -371,28 +371,29 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
+            <div class="clear"></div>
         </div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
-            <div class="container clearfix">
-                <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos y Animación</h2>
-                        </div>
-                        <p class="lead text-justify">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                            <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
-                        </a>
+        <div id="section-nextgen" class="page-section  topmargin" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+            <div class="row clearfix">
+                <div class="col-lg-5 center">
+                    <img src="images/servicios/DISEÑO/3-3.png" alt="NextGen Framework" data-animate="fadeInLeft">
+                </div>
+                <div class="col-lg-7 container clearfix ">
+                    <div class="topmargin-lg d-none d-lg-block"></div>
+                    <div class="emphasis-title bottommargin-sm">
+                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Videos y Animación</h2>
                     </div>
+                    <p class="lead text-justify  d-block d-sm-none">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
+                    <p class="lead text-justify container d-sm-block d-none ">Nos encargamos de crear una comunicación efectiva mediante creaciones de personajes, dibujos y elementos decorativos de alto impacto obteniendo el mejor resultado para vender su marca.</p>
+                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Contáctanos</span>
+                    </a>
                 </div>
             </div>
-            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/diseño/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
-            </div>
         </div>
+       
     </section>
     <footer id="footer" class="bg-azul">
         <div class="container">
