--- a/marketing.html
+++ b/marketing.html
@@ -106,14 +106,14 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="images/logos/home.png" alt="CreativosPlus">
                     </a>
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
@@ -264,9 +264,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            Contecta con nosotros y nosotros conectaremos con tus clientes!
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -372,25 +372,25 @@
                 </div>
             </div>
         </div> 
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
-            <div class="container clearfix">
-                <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Branding</h2>
-                        </div>
-                        <p class="lead text-justify">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                            <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
-                        </a>
-                    </div>
+        <div class="line"></div>
+        <div class="clear"></div>
+        <div id="section-nextgen" class="page-section  " style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+            <div class="row clearfix">
+                <div class="col-lg-6 ">
+                    <img class="d-sm-block d-none " src="images/servicios/marketing/3-3.png" alt="identidad Web" data-animate="fadeInLeft" style="position: absolute; margin-top:-300px;">
+                    <img class="d-block d-sm-none" src="images/servicios/marketing/3-3.png" alt="identidad Web" data-animate="fadeInLeft" >
                 </div>
-            </div>
-            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/marketing/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="col-lg-6 container rclearfix ">
+                    <div class="emphasis-title bottommargin-sm">
+                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Branding</h2>
+                    </div>
+                    <p class="lead text-justify  d-block d-sm-none">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
+                    <p class="lead text-justify container  d-sm-block d-none ">Diseñamos una estrategia de medición de acuerdo a los objetivos de tu negocio, conociendo donde están tus clientes más activos.</p>
+                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Contáctanos</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -424,7 +424,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -436,9 +436,12 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
