--- a/seo.html
+++ b/seo.html
@@ -106,15 +106,15 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-reorder"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
-                        <img style="margin-right:50px" src="images/logos/logoblanco.png" alt="CreativosPlus">
-                    </a>
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
+                        <img src="images/logos/home.png" alt="CreativosPlus">
+                    </a>     
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
@@ -251,7 +251,7 @@
                             data-voffset="['50','40','0','-60']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
-                            data-width="['640','481','320','260']"
+                            data-width="['640','481','320','160']"
                             data-height="none"
                             data-whitespace="normal"
                             data-type="text"
@@ -264,9 +264,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
+                            ¡Posicionarte en manos de expertos es tu mejor opción! Conoce nuestras estrategias.
                         </div>
-                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                        <div class="d-none d-sm-block tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
                             id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
@@ -372,7 +372,9 @@
                 </div>
             </div>
         </div>
-        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
+        <div class="line"></div>
+        <div class="clear"></div>
+        <div id="section-secured-solutions" class="nomargin page-section section nopadding topmargin-sm" style="background: url(images/3.jpg) left bottom / 100% no-repeat; height: 400px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-7 offset-lg-5">
@@ -389,7 +391,7 @@
                     </div>
                 </div>
             </div>
-            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1;">
+            <div class="video-wrap container" style="position: relative; height: 100%; z-index: 1; margin-top:-300px;  ">
                 <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('images/servicios/seo/3-3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
             </div>
         </div>
@@ -424,7 +426,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -436,9 +438,12 @@
                                 <label class="texto-blanco" for="mensaje">Mensaje (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Escribe tu mensaje"></textarea>
                             </div>
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <i class="icon-line-arrow-right"></i>
+                                <span>Enviar</span>
+                            </button>
                         </div>
                     </div>
-                    <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
                 <div class="row clearfix">
