--- a/us/diseno-grafico.html
+++ b/us/diseno-grafico.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/swiper.css" type="text/css">
     <link rel="stylesheet" href="../css/sweetalert2.min.css">
     
-    <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="../css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link rel="stylesheet" href="../rs-plugin/css/settings.css">
@@ -39,7 +39,7 @@
     <meta name="Classification" content="commercial">
     <meta name="Usergroup" content="Public">
     <meta content="yes" http-equiv="public">
-    <meta property="og:url" content="https://creativosplus.com"/>
+    <meta property="og:url" content="https://creativosplus.com/diseno-grafico"/>
     <meta name="googlebot" content="all">
     <meta NAME="rating" CONTENT="General">
     <meta name="audience" content="All">
@@ -106,7 +106,7 @@
         <div id="header-wrap">
             <div class="container clearfix">
                 <div id="primary-menu-trigger">
-                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>
+                    <i class="icon-plus texto-verde" style="font-size: 25px"></i>  
                 </div>
                 <div id="logo">
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
@@ -115,7 +115,6 @@
                     <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/home.png">
                         <img src="../images/logos/home.png" alt="CreativosPlus">
                     </a>
-                    
                 </div>
                 <nav id="primary-menu" class="with-arrows clearfix not-dark">
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
@@ -229,7 +228,7 @@
                             data-x="['left','left','left','left']" 
                             data-hoffset="['-10','-10','-10','-10']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['220','220','220','150']"  
+                            data-voffset="['300','300','300','300']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -242,7 +241,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="../images/slider/graphic-design.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
+                            <img src="../images/slider/DISEÑO GRAFICO.png" alt="" data-ww="['700px','700px','700px','700px']" data-hh="['150px','150px','150px','150px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -252,7 +251,7 @@
                             data-voffset="['50','40','0','-60']"
                             data-fontsize="['26','23','20','17']"
                             data-lineheight="['35','30','25','22']"
-                            data-width="['40','481','320','260']"
+                            data-width="['640','481','320','260']"
                             data-height="none"
                             data-whitespace="normal"
                             data-type="text"
@@ -298,7 +297,7 @@
                             data-whitespace="nowrap"
                             data-type="svg" 
                             data-actions='[{"event":"click","action":"scrollbelow","offset":"-60","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
-                            data-svg_src="../images/slider/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_src="images/slider/ic_keyboard_arrow_down_24px.svg" 
                             data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
                             data-basealign="slide" 
@@ -364,7 +363,7 @@
                         <p class="lead text-justify">We transmit by means of physical and digital components the concept of your business, with your corporate identity we will achieve to give value to your brand.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contactanos</span>
+                            <span>Contact Us</span>
                         </a>
                     </div>
                     <div class="col-lg-5 center">
@@ -372,26 +371,26 @@
                     </div>
                 </div>
             </div>
+            <div class="line"></div>
+            <div class="clear"></div>
         </div>
-        <div id="section-stunning-graphics" class="nomargin page-section section nopadding topmargin-sm" style="background: url(../images/3.jpg) left bottom / 100% no-repeat; height: 700px;" data-height-xl="700" data-height-lg="700" data-height-md="450" data-height-sm="450" data-height-xs="450">
-            <div class="container clearfix">
-                <div class="row clearfix">
-                    <div class="col-lg-7 offset-lg-5">
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="topmargin-lg d-none d-lg-block"></div>
-                        <div class="emphasis-title bottommargin-sm">
-                            <h2 style="font-size: 42px;" class="font-body ls1 t400">Videos and Animation</h2>
-                        </div>
-                        <p class="lead text-justify">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
-                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
-                            <i class="icon-line-arrow-right"></i>
-                            <span>Contact Us</span>
-                        </a>
-                    </div>
+        <div id="section-nextgen" class="page-section  topmargin" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+            <div class="row clearfix">
+                <div class="col-lg-5 ">
+                    <img src="../images/servicios/DISEÑO/3-3.png" alt="NextGen Framework" data-animate="fadeInLeft">
                 </div>
-            </div>
-            <div class="video-wrap" style="position: absolute; height: 100%; z-index: 1; left: -165px;">
-                <div class="video-overlay d-none d-lg-block fadeInLeft animated" style="background: url('../images/servicios/DISEÑO/3.png') no-repeat left top; background-size: auto 100%;" data-animate="fadeInLeft"></div>
+                <div class="col-lg-7 container">
+                    <div class="topmargin-lg d-none d-lg-block"></div>
+                    <div class="emphasis-title bottommargin-sm">
+                        <h2 style="font-size: 42px;" class="font-body ls1 t500">Videos y Animación</h2>
+                    </div>
+                    <p class="lead text-justify  d-block d-sm-none">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
+                    <p class="lead text-justify container d-sm-block d-none ">We take charge of creating an effective communication by means of creations of characters, drawings and decorative elements of high impact obtaining the best result to sell your brand.</p>
+                    <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                        <i class="icon-line-arrow-right"></i>
+                        <span>Contact Us</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -425,7 +424,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Quotes, support, concerns">
                                     </div>
                                 </div>
-                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="d-sm-block d-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Send</span>
                                 </button>
@@ -437,7 +436,7 @@
                                 <label class="texto-blanco" for="mensaje">Message (*)</label>
                                 <textarea class="form-control" id="mensaje" name="mensaje" rows="7" cols="30" placeholder="Your Message"></textarea>
                             </div>
-                            <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                            <button type="button" id="puto" class="d-block d-sm-none button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                 <i class="icon-line-arrow-right"></i>
                                 <span>Send</span>
                             </button>
